--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mkdirp": "~0.5.0",
     "node-uuid": "~1.4.1",
     "async": "~0.9.0",
-    "clone": "~0.1.18"
+    "clone": "~0.1.18",
+    "posix-ext" : "0.1.1"
   },
   "devDependencies": {
     "chai": "~1.9.2",
